--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,20 @@ input[type=submit]:hover {
     padding-left: 8px;
 }
 
+div.tooltip {
+    position: absolute;
+    text-align: center;
+    max-width: 200px;
+    height: auto;
+    padding: 2px;
+    font: 12px arial;
+    background: #ece6e4;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+    text-align: center;
+}
+
 .main {
     margin-left: 300px;
     padding: 0px 10px;
