--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,9 @@ input[type=submit]:hover {
 .sidenav {
     height: 100%;
     width: 320px;
+    overflow-x: hidden;
+    min-width: 150px;
+    max-width: 400px;
     position: fixed;
     z-index: 1;
     top: 0;
