Updates the tweets file to include ids for the twitter widgets

--- a/src/style.css
+++ b/src/style.css
@@ -121,3 +121,8 @@ div.tooltip {
 div.ui-slider-range.ui-widget-header {
     background-color: #00acee;
 }
+
+#twittercontainer {
+    position: relative;
+    left: 400px;
+}
