--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,10 @@
-h2, h4 {
+h2, h4, label, #scatter-form {
     font-family: trebuchet ms;
 }
 
 p {
     font-family: trebuchet ms;
     font-size: 13px;
-}
-
-label {
-    font-family: trebuchet ms;
 }
 
 input[type=text] {
