--- a/src/style.css
+++ b/src/style.css
@@ -259,3 +259,17 @@ section[role='tabpanel'] {
 #clear {
     background-color: #00acee;
 }
+
+div#tooltip {
+    position: absolute;
+    display: inline-block;
+    padding: 10px;
+    font-family: 'Open Sans' sans-serif;
+    color: #000;
+    background-color: #fff;
+    border: 1px solid #999;
+    border-radius: 2px;
+    pointer-events: none;
+    opacity: 0;
+    z-index: 1;
+}
