--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,16 @@
-h1, h3, h4, label, span, p, #scatter-form, #dropdown-container-1 {
+h2, h4, label, #scatter-form {
     font-family: trebuchet ms;
 }
 
-h1 {
-    text-align: center;
-}
-
 span {
+    font-family: trebuchet ms;
     font-size: 13px;
     font-style: italic;
     color: #009900;
 }
 
 p {
+    font-family: trebuchet ms;
     font-size: 13px;
 }
 
