--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,10 @@ span {
     font-style: italic;
 }
 
+#option {
+    font-size: 20px;
+}
+
 #result {
     color: #009900;
 }
@@ -269,6 +273,7 @@ ul[role='tablist'] li {
 ul[role='tablist'] li a {
   font-weight: bold;
   text-decoration: none;
+  color: black;
 
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
@@ -282,6 +287,7 @@ ul[role='tablist'] li a {
 }
 
 ul[role='tablist'] li a[aria-selected='true'] {
+  color: #00acee;
   border-bottom-color: #f9f9f9;
 }
 
