--- a/src/style.css
+++ b/src/style.css
@@ -244,7 +244,7 @@ font-weight: bold;
 .yAxis {
     font-family: trebuchet ms;
     font-size: 11px;
-    fill: white;
+    fill: black;
 }
 
 ul[role='tablist'],
